[package]
name = "loaf"
version = "0.2.0-alpha1"
authors = ["Soveu <marx.tomasz@gmail.com>"]
edition = "2018"

description = "Why have a slice when you can have a loaf?"
keywords = ["slice", "no_std", "no-std", "array"]
categories = ["data-structures", "no-std"]
repository = "https://github.com/Soveu/loaf"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []

# for const generics
nightly = []

# to enable Box and Vec stuff
alloc   = []

#[[test]]
#name = "loaf_alloc"
#required-features = ["alloc"]

[profile.test]
# Be sure that every UB is catched
opt-level = 3

[package.metadata.docs.rs]
all-features = true

